# DVMpp

./: .gitignore  BaseTypes.cpp  BaseTypes.hpp  CMakeLists.txt  DVM.cpp  DVMBase.cpp  DVMBase.hpp  DVMRoutines.cpp  DVMold.cpp  LICENSE  LiCENSE  Makefile  README.md  main.cpp
doc/: CMakeLists.txt  Doxyfile
examples/cylinder/: bodycoordinatesN40.txt  cylinder.xml
matlab/: fBlobVisualise.m  fParseForces.m
scripts/: dvm_stamp_exe.py  update_dvm_field.py  update_dvm_paths.py
src/: .clang-format  BaseTypes.cpp  BaseTypes.hpp  Body.cpp  Body.hpp  CMakeLists.txt  DVMBase.cpp  DVMBase.hpp  Exceptions.hpp  Makefile  Probe.cpp  Probe.hpp  Random.cpp  Random.hpp  VelocityKernel.cpp  VelocityKernel.hpp  VortexBlobs.cpp  VortexBlobs.hpp  VortexSheet.cpp  VortexSheet.hpp  XmlHandler.cpp  XmlHandler.hpp  main.cpp
tests/: CMakeLists.txt
tests/fixtures/test_configs/: cylinder_test.xml
tests/fixtures/test_data/: simple_body.txt
tests/integration/: CMakeLists.txt  test_BiotSavart.cpp
tests/regression/: CMakeLists.txt  test_CylinderFlow.cpp
tests/unit/: CMakeLists.txt  test_BackgroundMesh.cpp  test_Probe.cpp  test_Random.cpp  test_VelocityKernel.cpp  test_VortexBlobs.cpp  test_VortexSheet.cpp  test_XmlHandler.cpp
